# pytest_new_Practical_combat

./: config.ini  config.yaml  conftest.py  main.py  pyproject.toml  requirements.txt  run.py  settings.py  测试提交.py
common/: __init__.py  base64_handler.py  crypto_md5.py  data_handler.py  find_allure.py  log_handler.py  mysql_handler.py  remote_handler.py  yaml_read_handler.py
logs/: api.log.2025-05-27  api.log.2025-05-29  api.log.2025-06-05  api.log.2025-06-06  api.log.2025-06-09  api.log.2025-06-10  api.log.2025-06-11  api.log.2025-06-12  api.log.2025-06-13  api.log.2025-06-16  api.log.2025-06-28  api.log.2025-07-02  api.log.2025-07-11  api.log.2025-07-18  api.log.2025-07-28  api.log.2025-07-29  api.log.2025-08-01  api.log.2025-08-04  api.log.2025-08-08  api.log.2025-08-15  api.log.2025-08-20  api.log.2025-08-21  api.log.2025-08-22  api.log.2025-08-23  api.log.2025-08-25  api.log.2025-09-01  api.log.2025-09-05  api.log.2025-09-08  api.log.2025-09-12  api.log.2025-09-17  api.log.2025-09-18  api.log.2025-09-19  api.log.2025-09-22  api.log.2025-09-28  api.log.2025-11-17  api.log.2025-11-20
report/: index.html
result/: 0010c36d-957d-4877-bc77-f0a42a7aae9b-container.json  00447084-f3c0-4bce-b37e-5132cb6cc081-container.json  004d2792-c78b-4a41-b6f5-c2aaf3e040b9-container.json  0051b36d-0a99-4bff-acf2-9ea6d1039f68-container.json  00524e7c-9275-4680-a6df-1e4407ab0451-attachment.txt  009a4017-6649-423c-ab2a-adbc7bd54f1f-container.json  00c3ff94-7e24-473f-827a-0cba8f417788-container.json  00e6b4a9-ce68-49c4-b7c4-5d8340b91e69-result.json  (+1821 more)
test_case/: conftest.py
(+1040 files in other folders)
